web/book/tests/documentation/snapshots/documentation__book__syntax__tuples__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nselect {first_name}\n"
---
SELECT
  first_name
FROM
  employees

